Bug 437932 - Canvas Only Mode does not hide Titlebar or go fullscreen the first time, unless cycling Ctrl+Shift+F once
Summary: Canvas Only Mode does not hide Titlebar or go fullscreen the first time, unle...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.4.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Reinold Rojas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-01 04:11 UTC by Tyson Tan
Modified: 2021-09-25 09:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2021-06-01 04:11:42 UTC
CONTEXT:
Krita can switch to Canvas-Only mode by pressing the "Tab" key. There are options on Configure Krita -> Canvas-only settings that hides the Titlebar and goes fullscreen. 

EXPECTED:
By default, every option on that page was checked, which means Krita should display only its canvas at fullscreen when the Tab key is pressed.

REALITY:
However, if a user presses Tab for the first time after they installed Krita, the Titlebar won't be hidden and Krita won't go fullscreen. It remains that way even after restarting Krita.

WORKAROUND:
Press Tab -> Ctrl+Shift+F x2.
After doing that then switching back, Krita will now allow Titlebar to be hidden and go fullscreen at will, even after restarting it.

SUSPECT:
Maybe a default configuration file issue.

TESTED:
Krita 4.4.3 under ArchLinux (KDE Plasma) and Windows 10 (21H1).
Comment 1 Ahab Greybeard 2021-06-01 09:59:13 UTC
I can replicate this situation for 4.4.0 and later appimages on Debian 10 with a fresh installation.

If the line 'fullscreenMode=false' is added to a freshly created kritarc file then this does not happen.
That line is present in the kritarc file after the Tab -> Ctrl+Shift+F operations described in the initial report.
Comment 2 Bug Janitor Service 2021-09-24 06:16:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1066
Comment 3 Halla Rempt 2021-09-24 08:17:53 UTC
Git commit bf0cf113576696be711166d7074af1e5472b28d4 by Halla Rempt, on behalf of Reinold Rojas.
Committed on 24/09/2021 at 08:17.
Pushed by rempt into branch 'master'.

Set default fullscreen mode to off

Before this commit the krita config set fullscreen mode true
by default despite Krita not actually starting in fullscreen.
That caused some canvas-only settings to behave incorrectly.
This commit aligns the fullscreen mode and startup
behavior (both off).

M  +1    -1    libs/ui/kis_config.cc

https://invent.kde.org/graphics/krita/commit/bf0cf113576696be711166d7074af1e5472b28d4
Comment 4 Halla Rempt 2021-09-24 08:18:40 UTC
Git commit 709a9b2d760d78f3f743c5798d97f53b6c299633 by Halla Rempt, on behalf of Reinold Rojas.
Committed on 24/09/2021 at 08:18.
Pushed by rempt into branch 'krita/5.0'.

Set default fullscreen mode to off

Before this commit the krita config set fullscreen mode true
by default despite Krita not actually starting in fullscreen.
That caused some canvas-only settings to behave incorrectly.
This commit aligns the fullscreen mode and startup
behavior (both off).
(cherry picked from commit bf0cf113576696be711166d7074af1e5472b28d4)

M  +1    -1    libs/ui/kis_config.cc

https://invent.kde.org/graphics/krita/commit/709a9b2d760d78f3f743c5798d97f53b6c299633
Comment 5 Tyson Tan 2021-09-25 09:52:11 UTC
Thank you Reinold and Halla! :D