Set default fullscreen mode to off

Before this commit the krita config set fullscreen mode true
by default despite Krita not actually starting in fullscreen.
That caused some canvas-only settings to behave incorrectly.
This commit aligns the fullscreen mode and startup
behavior (both off).

BUG:437932